# Thesis

./: README.md
esp-inferring/: .gitignore  CMakeLists.txt  README.md  partitions.csv
esp-inferring/main/: CMakeLists.txt  config.c  config.h  idf_component.yml  main.c
esp-inferring/main/ai/: ai.cc  ai.h
esp-inferring/main/bme_sim/: bme_sim.c  bme_sim.h
esp-inferring/main/dispatcher/: dispatcher.c  dispatcher.h
esp-inferring/main/model/: fp16_model.h  int8_stat_model.h
esp-inferring/main/mqtt/: mqtt.c  mqtt.h
esp-inferring/main/mutex/: mutex.c  mutex.h
esp-inferring/main/secrets/: secrets_template.h
esp-inferring/main/wifi/: wifi.c  wifi.h
pytorch-project/: .gitignore  README.md  bme688_simulator.py  converter.py  inference.py  quantizer.py  requirements.txt  train.py
pytorch-project/data/specimendata/: laboratory_water_6_v_1_h_45_min_2.bmespecimen  water_ethanol_4_0_v_alc_6_v_14.bmespecimen  water_ethanol_4_5_v_alc_6_v_25.bmespecimen
pytorch-project/data/specimendata2/: crisp_0_0_v_alc_6_v_63.bmespecimen  crisp_ipa_0_5_v_alc_6_v_65.bmespecimen  karhu_0_alc_6_v_62.bmespecimen  kukko_ipa_0_3_v_alc_6_v_66.bmespecimen
pytorch-project/data/specimendata3/: coop_vaalea_lager_0_0_v_alc_6_v_64.bmespecimen  laboratory_water_ethanol_5_5_v_alc_6_v_50_min_42.bmespecimen  laboratory_water_ethanol_5_v_alc_6_v_34.bmespecimen
pytorch-project/lib/: __init__.py  data_loader.py  data_preprocessing.py  neural_net.py  neural_net_onecyclelr.py
