idf_component_register(SRCS "main.c"
                            "config.c"
                            "ai/ai.cc"
                            "bme_sim/bme_sim.c"
                            "dispatcher/dispatcher.c"
                            "mqtt/mqtt.c"
                            "mutex/mutex.c"
                            "wifi/wifi.c"
                    INCLUDE_DIRS "."
                                 "ai"
                                 "bme_sim"
                                 "dispatcher"
                                 "model"
                                 "mqtt"
                                 "mutex"
                                 "secrets"
                                 "wifi")